# pixelit-image-processor

./: .gitignore  BrightnessPage.qml  CMakeLists.txt  ContrastPage.qml  ControlButton.qml  CropPage.qml  ExposurePage.qml  FiltersController.cpp  FiltersController.h  FiltersPage.qml  GrayScalePage.qml  ImageControlButton.qml  ImageController.cpp  ImageController.h  ImagePropertyNavigation.qml  ImageProvider.cpp  ImageProvider.h  ImageRotationController.cpp  ImageRotationController.h  ImageScaleController.cpp  ImageScaleController.h  ImageTextureController.cpp  ImageTextureController.h  ImageTextureControllerr.cpp  ImageViewer.qml  InvertPage.qml  Main.qml  NavigationButton.qml  NavigationController.cpp  PanPage.qml  README.md  RotatePage.qml  SaturationPage.qml  SepiaPage.qml  SharpenPage.qml  TitleBar.qml  WindowController.cpp  WindowController.h  ZoomPage.qml  main.cpp
controllers/: FiltersController.cpp  ImageController.cpp  ImageController.h  ImageCropController.cpp  ImageCropController.h  ImageResizeController.cpp  ImageResizeController.h  ImageRotationController.cpp  ImageRotationController.h  ImageScaleController.cpp  ImageScaleController.h  ImageTextureController.cpp  ImageTextureController.h  NavigationController.cpp  NavigationController.h
utilities/: ImageProvider.cpp  ImageProvider.h
views/: BrightnessPage.qml  ContrastPage.qml  CropPage.qml  ExposurePage.qml  FiltersPage.qml  GrayScalePage.qml  ImageControlButton.qml  ImageController.qml  ImageViewer.qml  InvertPage.qml  Main.qml  NavigationButton.qml  ResizePage.qml  RotatePage.qml  SaturationPage.qml  SepiaPage.qml  SharpenPage.qml  TitleBar.qml  ZoomPage.qml
